# fastopendata_client

./: .gitignore  README.md
fastopendata_client/: LICENSE  README.md  pyproject.toml  requirements.txt
fastopendata_client/src/fastopendata_client/: __init__.py  cli_entry.py  client.py  config.toml  session.py
