[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastopendata_client"
version = "0.0.8"
authors = [
  { name="Zachary Ernst", email="zac.ernst@gmail.com" },
]
description = "Client for the FastOpenData API service"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zacernst/fastopendata"
"Bug Tracker" = "https://github.com/zacernst/fastopendata/issues"
